--- a/backend/package.json
+++ b/backend/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "src/index.js",
+  "type": "module",
   "scripts": {
     "dev": "nodemon src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,10 +11,16 @@
   "author": "krishna gupta",
   "license": "ISC",
   "dependencies": {
+    "@clerk/clerk-sdk-node": "^5.1.0",
+    "@clerk/express": "^1.3.27",
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
+    "dompurify": "^3.2.3",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "jsdom": "^25.0.1",
     "jsonwebtoken": "^9.0.2",
+    "marked": "^15.0.3",
     "mongoose": "^8.8.4",
     "multer": "^1.4.5-lts.1"
   }
