--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,18 +11,27 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
+    "@lexical/react": "^0.21.0",
+    "@mdx-js/react": "^3.1.0",
+    "@mdxeditor/editor": "^3.20.0",
     "@radix-ui/react-dialog": "^1.1.3",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.3",
+    "@toast-ui/editor": "^3.2.2",
+    "@toast-ui/react-editor": "^3.2.3",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "jwt-decode": "^4.0.0",
+    "lexical": "^0.21.0",
     "lucide-react": "^0.468.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.1",
     "react-router-dom": "^7.0.2",
+    "react-simplemde-editor": "^5.2.0",
+    "simplemde": "^1.11.2",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
@@ -30,6 +39,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
+    "@mdx-js/rollup": "^3.1.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.4",
