--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,12 +26,14 @@
     "jwt-decode": "^4.0.0",
     "lexical": "^0.21.0",
     "lucide-react": "^0.468.0",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.1",
     "react-router-dom": "^7.0.2",
     "react-simplemde-editor": "^5.2.0",
     "simplemde": "^1.11.2",
+    "slugify": "^1.6.6",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
