--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,13 +16,16 @@
     "@mdxeditor/editor": "^3.20.0",
     "@radix-ui/react-dialog": "^1.1.3",
     "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-popover": "^1.1.4",
+    "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.3",
     "@toast-ui/editor": "^3.2.2",
-    "@toast-ui/react-editor": "^3.2.3",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "jodit": "^4.2.47",
+    "jodit-react": "^4.1.2",
     "jwt-decode": "^4.0.0",
     "lexical": "^0.21.0",
     "lucide-react": "^0.468.0",
