--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "marked": "^15.0.3",
     "mongoose": "^8.8.4",
     "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.1.9",
     "slugify": "^1.6.6"
   }
 }
