--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "lexical": "^0.21.0",
     "lucide-react": "^0.468.0",
     "moment": "^2.30.1",
+    "nodemon": "^3.1.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.1",
