--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@fontsource/roboto": "^5.1.0",
     "@hookform/resolvers": "^3.9.1",
     "@lexical/react": "^0.21.0",
     "@mdx-js/react": "^3.1.0",
     "@mdxeditor/editor": "^3.20.0",
+    "@mui/material": "^6.3.0",
     "@radix-ui/react-dialog": "^1.1.3",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-popover": "^1.1.4",
