--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@lexical/react": "^0.21.0",
     "@mdx-js/react": "^3.1.0",
     "@mdxeditor/editor": "^3.20.0",
+    "@mui/icons-material": "^6.3.0",
     "@mui/material": "^6.3.0",
     "@radix-ui/react-dialog": "^1.1.3",
     "@radix-ui/react-label": "^2.1.1",
